--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>diyorbek</h1>
     <h2>git and github</h2>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque aliquid maxime ex fugit rerum perspiciatis reprehenderit placeat suscipit sed incidunt architecto natus expedita, accusantium itaque, ad reiciendis, dolorum fuga eveniet!</p>
 .
